parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    CLOSEBRACE
    DIV
    GEQ
    LEQ
    MINUS
    MOD
    MUL
    OPENBRACE
    PLUS
    avisar
    es
    fin_explicar
    hacer
    para
    tratar

Grammar

Rule 0     S' -> main_program
Rule 1     main_program -> comienzo OPENCURLY statements CLOSECURLY fin
Rule 2     main_program -> comienzo classes fin
Rule 3     main_program -> comienzo function_heading fin
Rule 4     statements -> identifier_list EQ expression
Rule 5     statements -> introducir type
Rule 6     statements -> imprimir OPENPAR identifier_list CLOSEPAR
Rule 7     statements -> imprimir QUOTATION identifier_list QUOTATION
Rule 8     statements -> regresso OPENPAR expression_list CLOSEPAR
Rule 9     statements -> si OPENPAR expression_list CLOSEPAR otro statements
Rule 10    statements -> optional_statements
Rule 11    statements -> if
Rule 12    statements -> while
Rule 13    statements -> COMMENT
Rule 14    statements -> imprimir OPENPAR expression CLOSEPAR
Rule 15    statements -> imprimir OPENPAR STRLIT CLOSEPAR
Rule 16    statements -> VAR ASSIGN expression imprimir OPENPAR VAR CLOSEPAR
Rule 17    statements -> VAR ASSIGN STRLIT imprimir OPENPAR VAR CLOSEPAR
Rule 18    identifier_list -> CHRLIT identifier_list
Rule 19    identifier_list -> STRLIT identifier_list
Rule 20    identifier_list -> INTLIT identifier_list
Rule 21    identifier_list -> UNDERSCORE
Rule 22    identifier_list -> empty
Rule 23    empty -> <empty>
Rule 24    expression -> expression
Rule 25    expression -> expression_list COMMA expression
Rule 26    expression -> identifier_list
Rule 27    expression_list -> logical_expression
Rule 28    expression_list -> arithmetic_expression
Rule 29    logical_expression -> expression < expression
Rule 30    logical_expression -> expression > expression
Rule 31    logical_expression -> expression LT expression
Rule 32    logical_expression -> expression GT expression
Rule 33    logical_expression -> expression = expression
Rule 34    logical_expression -> expression NEQ expression
Rule 35    logical_expression -> expression EQ expression
Rule 36    logical_expression -> expression ! expression
Rule 37    logical_expression -> expression OR expression
Rule 38    logical_expression -> expression AND expression
Rule 39    logical_expression -> NOT expression
Rule 40    arithmetic_expression -> expression + expression
Rule 41    arithmetic_expression -> expression - expression
Rule 42    arithmetic_expression -> expression * expression
Rule 43    arithmetic_expression -> expression / expression
Rule 44    arithmetic_expression -> expression % expression
Rule 45    type -> INTLIT identifier_list TILDE
Rule 46    type -> FLTLIT identifier_list TILDE
Rule 47    type -> DBLLIT identifier_list TILDE
Rule 48    type -> CHRLIT identifier_list TILDE
Rule 49    type -> STRLIT identifier_list TILDE
Rule 50    optional_statements -> statement_list
Rule 51    optional_statements -> empty
Rule 52    statement_list -> statements
Rule 53    statement_list -> statement_list statements
Rule 54    if -> si OPENPAR expression_list CLOSEPAR statements
Rule 55    if -> si OPENPAR expression_list CLOSEPAR statements else_if
Rule 56    else_if -> otro OPENPAR expression CLOSEPAR statements else_if
Rule 57    else_if -> empty
Rule 58    while -> mientras OPENPAR expression_list CLOSEPAR TILDE optional_statements TILDE
Rule 59    while -> mientras OPENPAR expression_list CLOSEPAR TILDE optional_statements TILDE romperse
Rule 60    classes -> clase OPENCURLY identifier_list optional_statements CLOSECURLY
Rule 61    function_heading -> explicar OPENPAR parameters TILDE CLOSEPAR
Rule 62    parameters -> type
Rule 63    parameters -> type COMMA parameters
Rule 64    parameters -> empty

Terminals, with rules where they appear

!                    : 36
%                    : 44
*                    : 42
+                    : 40
-                    : 41
/                    : 43
<                    : 29
=                    : 33
>                    : 30
AND                  : 38
ASSIGN               : 16 17
BOOLEAN              : 
CHRLIT               : 18 48
CLOSEBRACE           : 
CLOSECURLY           : 1 60
CLOSEPAR             : 6 8 9 14 15 16 17 54 55 56 58 59 61
COMMA                : 25 63
COMMENT              : 13
DBLLIT               : 47
DIV                  : 
EQ                   : 4 35
FLTLIT               : 46
GEQ                  : 
GT                   : 32
INTLIT               : 20 45
LEQ                  : 
LT                   : 31
MINUS                : 
MOD                  : 
MUL                  : 
NEQ                  : 34
NOT                  : 39
OPENBRACE            : 
OPENCURLY            : 1 60
OPENPAR              : 6 8 9 14 15 16 17 54 55 56 58 59 61
OR                   : 37
PLUS                 : 
QUOTATION            : 7 7
STRLIT               : 15 17 19 49
TILDE                : 45 46 47 48 49 58 58 59 59 61
UNDERSCORE           : 21
VAR                  : 16 16 17 17
avisar               : 
clase                : 60
comienzo             : 1 2 3
error                : 
es                   : 
explicar             : 61
fin                  : 1 2 3
fin_explicar         : 
hacer                : 
imprimir             : 6 7 14 15 16 17
introducir           : 5
mientras             : 58 59
otro                 : 9 56
para                 : 
regresso             : 8
romperse             : 59
si                   : 9 54 55
tratar               : 

Nonterminals, with rules where they appear

arithmetic_expression : 28
classes              : 2
else_if              : 55 56
empty                : 22 51 57 64
expression           : 4 14 16 24 25 29 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 40 40 41 41 42 42 43 43 44 44 56
expression_list      : 8 9 25 54 55 58 59
function_heading     : 3
identifier_list      : 4 6 7 18 19 20 26 45 46 47 48 49 60
if                   : 11
logical_expression   : 27
main_program         : 0
optional_statements  : 10 58 59 60
parameters           : 61 63
statement_list       : 50 53
statements           : 1 9 52 53 54 55 56
type                 : 5 62 63
while                : 12

Parsing method: LALR

state 0

    (0) S' -> . main_program
    (1) main_program -> . comienzo OPENCURLY statements CLOSECURLY fin
    (2) main_program -> . comienzo classes fin
    (3) main_program -> . comienzo function_heading fin

    comienzo        shift and go to state 2

    main_program                   shift and go to state 1

state 1

    (0) S' -> main_program .



state 2

    (1) main_program -> comienzo . OPENCURLY statements CLOSECURLY fin
    (2) main_program -> comienzo . classes fin
    (3) main_program -> comienzo . function_heading fin
    (60) classes -> . clase OPENCURLY identifier_list optional_statements CLOSECURLY
    (61) function_heading -> . explicar OPENPAR parameters TILDE CLOSEPAR

    OPENCURLY       shift and go to state 3
    clase           shift and go to state 6
    explicar        shift and go to state 7

    classes                        shift and go to state 4
    function_heading               shift and go to state 5

state 3

    (1) main_program -> comienzo OPENCURLY . statements CLOSECURLY fin
    (4) statements -> . identifier_list EQ expression
    (5) statements -> . introducir type
    (6) statements -> . imprimir OPENPAR identifier_list CLOSEPAR
    (7) statements -> . imprimir QUOTATION identifier_list QUOTATION
    (8) statements -> . regresso OPENPAR expression_list CLOSEPAR
    (9) statements -> . si OPENPAR expression_list CLOSEPAR otro statements
    (10) statements -> . optional_statements
    (11) statements -> . if
    (12) statements -> . while
    (13) statements -> . COMMENT
    (14) statements -> . imprimir OPENPAR expression CLOSEPAR
    (15) statements -> . imprimir OPENPAR STRLIT CLOSEPAR
    (16) statements -> . VAR ASSIGN expression imprimir OPENPAR VAR CLOSEPAR
    (17) statements -> . VAR ASSIGN STRLIT imprimir OPENPAR VAR CLOSEPAR
    (18) identifier_list -> . CHRLIT identifier_list
    (19) identifier_list -> . STRLIT identifier_list
    (20) identifier_list -> . INTLIT identifier_list
    (21) identifier_list -> . UNDERSCORE
    (22) identifier_list -> . empty
    (50) optional_statements -> . statement_list
    (51) optional_statements -> . empty
    (54) if -> . si OPENPAR expression_list CLOSEPAR statements
    (55) if -> . si OPENPAR expression_list CLOSEPAR statements else_if
    (58) while -> . mientras OPENPAR expression_list CLOSEPAR TILDE optional_statements TILDE
    (59) while -> . mientras OPENPAR expression_list CLOSEPAR TILDE optional_statements TILDE romperse
    (23) empty -> .
    (52) statement_list -> . statements
    (53) statement_list -> . statement_list statements

  ! shift/reduce conflict for introducir resolved as shift
  ! shift/reduce conflict for imprimir resolved as shift
  ! shift/reduce conflict for regresso resolved as shift
  ! shift/reduce conflict for si resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for CHRLIT resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
  ! shift/reduce conflict for mientras resolved as shift
    introducir      shift and go to state 10
    imprimir        shift and go to state 11
    regresso        shift and go to state 12
    si              shift and go to state 13
    COMMENT         shift and go to state 17
    VAR             shift and go to state 19
    CHRLIT          shift and go to state 20
    STRLIT          shift and go to state 18
    INTLIT          shift and go to state 21
    UNDERSCORE      shift and go to state 22
    mientras        shift and go to state 25
    EQ              reduce using rule 23 (empty -> .)
    CLOSECURLY      reduce using rule 23 (empty -> .)

  ! introducir      [ reduce using rule 23 (empty -> .) ]
  ! imprimir        [ reduce using rule 23 (empty -> .) ]
  ! regresso        [ reduce using rule 23 (empty -> .) ]
  ! si              [ reduce using rule 23 (empty -> .) ]
  ! COMMENT         [ reduce using rule 23 (empty -> .) ]
  ! VAR             [ reduce using rule 23 (empty -> .) ]
  ! CHRLIT          [ reduce using rule 23 (empty -> .) ]
  ! STRLIT          [ reduce using rule 23 (empty -> .) ]
  ! INTLIT          [ reduce using rule 23 (empty -> .) ]
  ! UNDERSCORE      [ reduce using rule 23 (empty -> .) ]
  ! mientras        [ reduce using rule 23 (empty -> .) ]

    statements                     shift and go to state 8
    identifier_list                shift and go to state 9
    optional_statements            shift and go to state 14
    if                             shift and go to state 15
    while                          shift and go to state 16
    empty                          shift and go to state 23
    statement_list                 shift and go to state 24

state 4

    (2) main_program -> comienzo classes . fin

    fin             shift and go to state 26


state 5

    (3) main_program -> comienzo function_heading . fin

    fin             shift and go to state 27


state 6

    (60) classes -> clase . OPENCURLY identifier_list optional_statements CLOSECURLY

    OPENCURLY       shift and go to state 28


state 7

    (61) function_heading -> explicar . OPENPAR parameters TILDE CLOSEPAR

    OPENPAR         shift and go to state 29


state 8

    (1) main_program -> comienzo OPENCURLY statements . CLOSECURLY fin
    (52) statement_list -> statements .

  ! shift/reduce conflict for CLOSECURLY resolved as shift
    CLOSECURLY      shift and go to state 30
    introducir      reduce using rule 52 (statement_list -> statements .)
    imprimir        reduce using rule 52 (statement_list -> statements .)
    regresso        reduce using rule 52 (statement_list -> statements .)
    si              reduce using rule 52 (statement_list -> statements .)
    COMMENT         reduce using rule 52 (statement_list -> statements .)
    VAR             reduce using rule 52 (statement_list -> statements .)
    CHRLIT          reduce using rule 52 (statement_list -> statements .)
    STRLIT          reduce using rule 52 (statement_list -> statements .)
    INTLIT          reduce using rule 52 (statement_list -> statements .)
    UNDERSCORE      reduce using rule 52 (statement_list -> statements .)
    mientras        reduce using rule 52 (statement_list -> statements .)
    EQ              reduce using rule 52 (statement_list -> statements .)

  ! CLOSECURLY      [ reduce using rule 52 (statement_list -> statements .) ]


state 9

    (4) statements -> identifier_list . EQ expression

    EQ              shift and go to state 31


state 10

    (5) statements -> introducir . type
    (45) type -> . INTLIT identifier_list TILDE
    (46) type -> . FLTLIT identifier_list TILDE
    (47) type -> . DBLLIT identifier_list TILDE
    (48) type -> . CHRLIT identifier_list TILDE
    (49) type -> . STRLIT identifier_list TILDE

    INTLIT          shift and go to state 33
    FLTLIT          shift and go to state 34
    DBLLIT          shift and go to state 35
    CHRLIT          shift and go to state 36
    STRLIT          shift and go to state 37

    type                           shift and go to state 32

state 11

    (6) statements -> imprimir . OPENPAR identifier_list CLOSEPAR
    (7) statements -> imprimir . QUOTATION identifier_list QUOTATION
    (14) statements -> imprimir . OPENPAR expression CLOSEPAR
    (15) statements -> imprimir . OPENPAR STRLIT CLOSEPAR

    OPENPAR         shift and go to state 38
    QUOTATION       shift and go to state 39


state 12

    (8) statements -> regresso . OPENPAR expression_list CLOSEPAR

    OPENPAR         shift and go to state 40


state 13

    (9) statements -> si . OPENPAR expression_list CLOSEPAR otro statements
    (54) if -> si . OPENPAR expression_list CLOSEPAR statements
    (55) if -> si . OPENPAR expression_list CLOSEPAR statements else_if

    OPENPAR         shift and go to state 41


state 14

    (10) statements -> optional_statements .

    CLOSECURLY      reduce using rule 10 (statements -> optional_statements .)
    introducir      reduce using rule 10 (statements -> optional_statements .)
    imprimir        reduce using rule 10 (statements -> optional_statements .)
    regresso        reduce using rule 10 (statements -> optional_statements .)
    si              reduce using rule 10 (statements -> optional_statements .)
    COMMENT         reduce using rule 10 (statements -> optional_statements .)
    VAR             reduce using rule 10 (statements -> optional_statements .)
    CHRLIT          reduce using rule 10 (statements -> optional_statements .)
    STRLIT          reduce using rule 10 (statements -> optional_statements .)
    INTLIT          reduce using rule 10 (statements -> optional_statements .)
    UNDERSCORE      reduce using rule 10 (statements -> optional_statements .)
    mientras        reduce using rule 10 (statements -> optional_statements .)
    EQ              reduce using rule 10 (statements -> optional_statements .)
    otro            reduce using rule 10 (statements -> optional_statements .)
    TILDE           reduce using rule 10 (statements -> optional_statements .)


state 15

    (11) statements -> if .

    CLOSECURLY      reduce using rule 11 (statements -> if .)
    introducir      reduce using rule 11 (statements -> if .)
    imprimir        reduce using rule 11 (statements -> if .)
    regresso        reduce using rule 11 (statements -> if .)
    si              reduce using rule 11 (statements -> if .)
    COMMENT         reduce using rule 11 (statements -> if .)
    VAR             reduce using rule 11 (statements -> if .)
    CHRLIT          reduce using rule 11 (statements -> if .)
    STRLIT          reduce using rule 11 (statements -> if .)
    INTLIT          reduce using rule 11 (statements -> if .)
    UNDERSCORE      reduce using rule 11 (statements -> if .)
    mientras        reduce using rule 11 (statements -> if .)
    EQ              reduce using rule 11 (statements -> if .)
    otro            reduce using rule 11 (statements -> if .)
    TILDE           reduce using rule 11 (statements -> if .)


state 16

    (12) statements -> while .

    CLOSECURLY      reduce using rule 12 (statements -> while .)
    introducir      reduce using rule 12 (statements -> while .)
    imprimir        reduce using rule 12 (statements -> while .)
    regresso        reduce using rule 12 (statements -> while .)
    si              reduce using rule 12 (statements -> while .)
    COMMENT         reduce using rule 12 (statements -> while .)
    VAR             reduce using rule 12 (statements -> while .)
    CHRLIT          reduce using rule 12 (statements -> while .)
    STRLIT          reduce using rule 12 (statements -> while .)
    INTLIT          reduce using rule 12 (statements -> while .)
    UNDERSCORE      reduce using rule 12 (statements -> while .)
    mientras        reduce using rule 12 (statements -> while .)
    EQ              reduce using rule 12 (statements -> while .)
    otro            reduce using rule 12 (statements -> while .)
    TILDE           reduce using rule 12 (statements -> while .)


state 17

    (13) statements -> COMMENT .

    CLOSECURLY      reduce using rule 13 (statements -> COMMENT .)
    introducir      reduce using rule 13 (statements -> COMMENT .)
    imprimir        reduce using rule 13 (statements -> COMMENT .)
    regresso        reduce using rule 13 (statements -> COMMENT .)
    si              reduce using rule 13 (statements -> COMMENT .)
    COMMENT         reduce using rule 13 (statements -> COMMENT .)
    VAR             reduce using rule 13 (statements -> COMMENT .)
    CHRLIT          reduce using rule 13 (statements -> COMMENT .)
    STRLIT          reduce using rule 13 (statements -> COMMENT .)
    INTLIT          reduce using rule 13 (statements -> COMMENT .)
    UNDERSCORE      reduce using rule 13 (statements -> COMMENT .)
    mientras        reduce using rule 13 (statements -> COMMENT .)
    EQ              reduce using rule 13 (statements -> COMMENT .)
    otro            reduce using rule 13 (statements -> COMMENT .)
    TILDE           reduce using rule 13 (statements -> COMMENT .)


state 18

    (19) identifier_list -> STRLIT . identifier_list
    (18) identifier_list -> . CHRLIT identifier_list
    (19) identifier_list -> . STRLIT identifier_list
    (20) identifier_list -> . INTLIT identifier_list
    (21) identifier_list -> . UNDERSCORE
    (22) identifier_list -> . empty
    (23) empty -> .

  ! shift/reduce conflict for CHRLIT resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
    CHRLIT          shift and go to state 20
    STRLIT          shift and go to state 18
    INTLIT          shift and go to state 21
    UNDERSCORE      shift and go to state 22
    EQ              reduce using rule 23 (empty -> .)
    introducir      reduce using rule 23 (empty -> .)
    imprimir        reduce using rule 23 (empty -> .)
    regresso        reduce using rule 23 (empty -> .)
    si              reduce using rule 23 (empty -> .)
    COMMENT         reduce using rule 23 (empty -> .)
    VAR             reduce using rule 23 (empty -> .)
    mientras        reduce using rule 23 (empty -> .)
    CLOSECURLY      reduce using rule 23 (empty -> .)
    <               reduce using rule 23 (empty -> .)
    >               reduce using rule 23 (empty -> .)
    LT              reduce using rule 23 (empty -> .)
    GT              reduce using rule 23 (empty -> .)
    =               reduce using rule 23 (empty -> .)
    NEQ             reduce using rule 23 (empty -> .)
    !               reduce using rule 23 (empty -> .)
    OR              reduce using rule 23 (empty -> .)
    AND             reduce using rule 23 (empty -> .)
    +               reduce using rule 23 (empty -> .)
    -               reduce using rule 23 (empty -> .)
    *               reduce using rule 23 (empty -> .)
    /               reduce using rule 23 (empty -> .)
    %               reduce using rule 23 (empty -> .)
    otro            reduce using rule 23 (empty -> .)
    TILDE           reduce using rule 23 (empty -> .)
    CLOSEPAR        reduce using rule 23 (empty -> .)
    QUOTATION       reduce using rule 23 (empty -> .)
    COMMA           reduce using rule 23 (empty -> .)

  ! CHRLIT          [ reduce using rule 23 (empty -> .) ]
  ! STRLIT          [ reduce using rule 23 (empty -> .) ]
  ! INTLIT          [ reduce using rule 23 (empty -> .) ]
  ! UNDERSCORE      [ reduce using rule 23 (empty -> .) ]

    identifier_list                shift and go to state 42
    empty                          shift and go to state 43

state 19

    (16) statements -> VAR . ASSIGN expression imprimir OPENPAR VAR CLOSEPAR
    (17) statements -> VAR . ASSIGN STRLIT imprimir OPENPAR VAR CLOSEPAR

    ASSIGN          shift and go to state 44


state 20

    (18) identifier_list -> CHRLIT . identifier_list
    (18) identifier_list -> . CHRLIT identifier_list
    (19) identifier_list -> . STRLIT identifier_list
    (20) identifier_list -> . INTLIT identifier_list
    (21) identifier_list -> . UNDERSCORE
    (22) identifier_list -> . empty
    (23) empty -> .

  ! shift/reduce conflict for CHRLIT resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
    CHRLIT          shift and go to state 20
    STRLIT          shift and go to state 18
    INTLIT          shift and go to state 21
    UNDERSCORE      shift and go to state 22
    EQ              reduce using rule 23 (empty -> .)
    introducir      reduce using rule 23 (empty -> .)
    imprimir        reduce using rule 23 (empty -> .)
    regresso        reduce using rule 23 (empty -> .)
    si              reduce using rule 23 (empty -> .)
    COMMENT         reduce using rule 23 (empty -> .)
    VAR             reduce using rule 23 (empty -> .)
    mientras        reduce using rule 23 (empty -> .)
    CLOSECURLY      reduce using rule 23 (empty -> .)
    <               reduce using rule 23 (empty -> .)
    >               reduce using rule 23 (empty -> .)
    LT              reduce using rule 23 (empty -> .)
    GT              reduce using rule 23 (empty -> .)
    =               reduce using rule 23 (empty -> .)
    NEQ             reduce using rule 23 (empty -> .)
    !               reduce using rule 23 (empty -> .)
    OR              reduce using rule 23 (empty -> .)
    AND             reduce using rule 23 (empty -> .)
    +               reduce using rule 23 (empty -> .)
    -               reduce using rule 23 (empty -> .)
    *               reduce using rule 23 (empty -> .)
    /               reduce using rule 23 (empty -> .)
    %               reduce using rule 23 (empty -> .)
    otro            reduce using rule 23 (empty -> .)
    TILDE           reduce using rule 23 (empty -> .)
    CLOSEPAR        reduce using rule 23 (empty -> .)
    QUOTATION       reduce using rule 23 (empty -> .)
    COMMA           reduce using rule 23 (empty -> .)

  ! CHRLIT          [ reduce using rule 23 (empty -> .) ]
  ! STRLIT          [ reduce using rule 23 (empty -> .) ]
  ! INTLIT          [ reduce using rule 23 (empty -> .) ]
  ! UNDERSCORE      [ reduce using rule 23 (empty -> .) ]

    identifier_list                shift and go to state 45
    empty                          shift and go to state 43

state 21

    (20) identifier_list -> INTLIT . identifier_list
    (18) identifier_list -> . CHRLIT identifier_list
    (19) identifier_list -> . STRLIT identifier_list
    (20) identifier_list -> . INTLIT identifier_list
    (21) identifier_list -> . UNDERSCORE
    (22) identifier_list -> . empty
    (23) empty -> .

  ! shift/reduce conflict for CHRLIT resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
    CHRLIT          shift and go to state 20
    STRLIT          shift and go to state 18
    INTLIT          shift and go to state 21
    UNDERSCORE      shift and go to state 22
    EQ              reduce using rule 23 (empty -> .)
    introducir      reduce using rule 23 (empty -> .)
    imprimir        reduce using rule 23 (empty -> .)
    regresso        reduce using rule 23 (empty -> .)
    si              reduce using rule 23 (empty -> .)
    COMMENT         reduce using rule 23 (empty -> .)
    VAR             reduce using rule 23 (empty -> .)
    mientras        reduce using rule 23 (empty -> .)
    CLOSECURLY      reduce using rule 23 (empty -> .)
    <               reduce using rule 23 (empty -> .)
    >               reduce using rule 23 (empty -> .)
    LT              reduce using rule 23 (empty -> .)
    GT              reduce using rule 23 (empty -> .)
    =               reduce using rule 23 (empty -> .)
    NEQ             reduce using rule 23 (empty -> .)
    !               reduce using rule 23 (empty -> .)
    OR              reduce using rule 23 (empty -> .)
    AND             reduce using rule 23 (empty -> .)
    +               reduce using rule 23 (empty -> .)
    -               reduce using rule 23 (empty -> .)
    *               reduce using rule 23 (empty -> .)
    /               reduce using rule 23 (empty -> .)
    %               reduce using rule 23 (empty -> .)
    otro            reduce using rule 23 (empty -> .)
    TILDE           reduce using rule 23 (empty -> .)
    CLOSEPAR        reduce using rule 23 (empty -> .)
    QUOTATION       reduce using rule 23 (empty -> .)
    COMMA           reduce using rule 23 (empty -> .)

  ! CHRLIT          [ reduce using rule 23 (empty -> .) ]
  ! STRLIT          [ reduce using rule 23 (empty -> .) ]
  ! INTLIT          [ reduce using rule 23 (empty -> .) ]
  ! UNDERSCORE      [ reduce using rule 23 (empty -> .) ]

    identifier_list                shift and go to state 46
    empty                          shift and go to state 43

state 22

    (21) identifier_list -> UNDERSCORE .

    EQ              reduce using rule 21 (identifier_list -> UNDERSCORE .)
    introducir      reduce using rule 21 (identifier_list -> UNDERSCORE .)
    imprimir        reduce using rule 21 (identifier_list -> UNDERSCORE .)
    regresso        reduce using rule 21 (identifier_list -> UNDERSCORE .)
    si              reduce using rule 21 (identifier_list -> UNDERSCORE .)
    COMMENT         reduce using rule 21 (identifier_list -> UNDERSCORE .)
    VAR             reduce using rule 21 (identifier_list -> UNDERSCORE .)
    CHRLIT          reduce using rule 21 (identifier_list -> UNDERSCORE .)
    STRLIT          reduce using rule 21 (identifier_list -> UNDERSCORE .)
    INTLIT          reduce using rule 21 (identifier_list -> UNDERSCORE .)
    UNDERSCORE      reduce using rule 21 (identifier_list -> UNDERSCORE .)
    mientras        reduce using rule 21 (identifier_list -> UNDERSCORE .)
    CLOSECURLY      reduce using rule 21 (identifier_list -> UNDERSCORE .)
    <               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    >               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    LT              reduce using rule 21 (identifier_list -> UNDERSCORE .)
    GT              reduce using rule 21 (identifier_list -> UNDERSCORE .)
    =               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    NEQ             reduce using rule 21 (identifier_list -> UNDERSCORE .)
    !               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    OR              reduce using rule 21 (identifier_list -> UNDERSCORE .)
    AND             reduce using rule 21 (identifier_list -> UNDERSCORE .)
    +               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    -               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    *               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    /               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    %               reduce using rule 21 (identifier_list -> UNDERSCORE .)
    otro            reduce using rule 21 (identifier_list -> UNDERSCORE .)
    TILDE           reduce using rule 21 (identifier_list -> UNDERSCORE .)
    CLOSEPAR        reduce using rule 21 (identifier_list -> UNDERSCORE .)
    QUOTATION       reduce using rule 21 (identifier_list -> UNDERSCORE .)
    COMMA           reduce using rule 21 (identifier_list -> UNDERSCORE .)


state 23

    (22) identifier_list -> empty .
    (51) optional_statements -> empty .

  ! reduce/reduce conflict for EQ resolved using rule 22 (identifier_list -> empty .)
    EQ              reduce using rule 22 (identifier_list -> empty .)
    CLOSECURLY      reduce using rule 51 (optional_statements -> empty .)
    introducir      reduce using rule 51 (optional_statements -> empty .)
    imprimir        reduce using rule 51 (optional_statements -> empty .)
    regresso        reduce using rule 51 (optional_statements -> empty .)
    si              reduce using rule 51 (optional_statements -> empty .)
    COMMENT         reduce using rule 51 (optional_statements -> empty .)
    VAR             reduce using rule 51 (optional_statements -> empty .)
    CHRLIT          reduce using rule 51 (optional_statements -> empty .)
    STRLIT          reduce using rule 51 (optional_statements -> empty .)
    INTLIT          reduce using rule 51 (optional_statements -> empty .)
    UNDERSCORE      reduce using rule 51 (optional_statements -> empty .)
    mientras        reduce using rule 51 (optional_statements -> empty .)
    otro            reduce using rule 51 (optional_statements -> empty .)
    TILDE           reduce using rule 51 (optional_statements -> empty .)

  ! EQ              [ reduce using rule 51 (optional_statements -> empty .) ]


state 24

    (50) optional_statements -> statement_list .
    (53) statement_list -> statement_list . statements
    (4) statements -> . identifier_list EQ expression
    (5) statements -> . introducir type
    (6) statements -> . imprimir OPENPAR identifier_list CLOSEPAR
    (7) statements -> . imprimir QUOTATION identifier_list QUOTATION
    (8) statements -> . regresso OPENPAR expression_list CLOSEPAR
    (9) statements -> . si OPENPAR expression_list CLOSEPAR otro statements
    (10) statements -> . optional_statements
    (11) statements -> . if
    (12) statements -> . while
    (13) statements -> . COMMENT
    (14) statements -> . imprimir OPENPAR expression CLOSEPAR
    (15) statements -> . imprimir OPENPAR STRLIT CLOSEPAR
    (16) statements -> . VAR ASSIGN expression imprimir OPENPAR VAR CLOSEPAR
    (17) statements -> . VAR ASSIGN STRLIT imprimir OPENPAR VAR CLOSEPAR
    (18) identifier_list -> . CHRLIT identifier_list
    (19) identifier_list -> . STRLIT identifier_list
    (20) identifier_list -> . INTLIT identifier_list
    (21) identifier_list -> . UNDERSCORE
    (22) identifier_list -> . empty
    (50) optional_statements -> . statement_list
    (51) optional_statements -> . empty
    (54) if -> . si OPENPAR expression_list CLOSEPAR statements
    (55) if -> . si OPENPAR expression_list CLOSEPAR statements else_if
    (58) while -> . mientras OPENPAR expression_list CLOSEPAR TILDE optional_statements TILDE
    (59) while -> . mientras OPENPAR expression_list CLOSEPAR TILDE optional_statements TILDE romperse
    (23) empty -> .
    (52) statement_list -> . statements
    (53) statement_list -> . statement_list statements

  ! shift/reduce conflict for introducir resolved as shift
  ! shift/reduce conflict for imprimir resolved as shift
  ! shift/reduce conflict for regresso resolved as shift
  ! shift/reduce conflict for si resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for CHRLIT resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
  ! shift/reduce conflict for mientras resolved as shift
  ! reduce/reduce conflict for EQ resolved using rule 23 (empty -> .)
  ! reduce/reduce conflict for CLOSECURLY resolved using rule 23 (empty -> .)
  ! shift/reduce conflict for introducir resolved as shift
  ! shift/reduce conflict for imprimir resolved as shift
  ! shift/reduce conflict for regresso resolved as shift
  ! shift/reduce conflict for si resolved as shift
  ! shift/reduce conflict for COMMENT resolved as shift
  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for CHRLIT resolved as shift
  ! shift/reduce conflict for STRLIT resolved as shift
  ! shift/reduce conflict for INTLIT resolved as shift
  ! shift/reduce conflict for UNDERSCORE resolved as shift
  ! shift/reduce conflict for mientras resolved as shift
  ! reduce/reduce conflict for otro resolved using rule 23 (empty -> .)
  ! reduce/reduce conflict for TILDE resolved using rule 23 (empty -> .)
    introducir      shift and go to state 10
    imprimir        shift and go to state 11
    regresso        shift and go to state 12
    si              shift and go to state 13
    COMMENT         shift and go to state 17
    VAR             shift and go to state 19
    CHRLIT          shift and go to state 20
    STRLIT          shift and go to state 18
    INTLIT          shift and go to state 21
    UNDERSCORE      shift and go to state 22
    mientras        shift and go to state 25
    EQ              reduce using rule 23 (empty -> .)
    CLOSECURLY      reduce using rule 23 (empty -> .)
    otro            reduce using rule 23 (empty -> .)
    TILDE           reduce using rule 23 (empty -> .)
